[JBWS-4084] update to new security-mgr flag, -secmgr. Add needed security policy file