@@ -180,6 +180,13 @@ public class ServiceRefTestCase extends JBossWSTest
    @OperateOnDeployment("jaxws-samples-serviceref")
    public void testApplicationClient() throws Exception
    {
+      String additionalJVMArgs = System.getProperty("additionalJvmArgs", "");
+      if ("-Djava.security.manager".equals(additionalJVMArgs)) {
+         // must pass path to policy file for JBossWSTestHelper to access.
+          System.setProperty("securityPolicyfile", JBossWSTestHelper.getTestResourcesDir()
+                  + "/jaxws/samples/serviceref/security.policy");
+      }
+
       try
       {
          final OutputStream appclientOS = new ByteArrayOutputStream();
